k8s-todo/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  # GatewayClassの名前(GatewayのgatewayClassNameで参照)
  name: eg
spec:
  # Envoy Gatewayを使う
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
